fix: overflow bug in top art section

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -12,7 +12,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 }
 
 /* Navbar styles */
@@ -502,7 +502,7 @@ body {
 }
 /* Art Mozaic */
 .art-mosaic {
-	height: 100vh;
+	height: auto;
 	columns: 3;
 	gap: 1em;
 }
